--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8"/>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5BG2J1H8TC"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-5BG2J1H8TC');
+  </script>
+
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>OuassVTC - Réservation VTC à Perpignan</title>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
@@ -98,60 +107,81 @@
   </style>
 </head>
 <body>
-  <header><img src="ouassvtc.png" alt="Logo OuassVTC" /></header>
+  <header>
+    <img src="ouassvtc.png" alt="Logo OuassVTC" />
+  </header>
+
   <div class="container">
-    <img src="voiture.png" alt="Voiture VTC" class="car-image"/>
+    <img src="voiture.png" alt="Voiture VTC" class="car-image" />
 
     <div class="buttons">
-      <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler</a>
-      <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
-      <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/sms.png"/> SMS</a>
-      <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/facebook-new.png"/> Facebook</a>
-      <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/snapchat.png"/> Snapchat</a>
+      <a href="tel:0644120784" onclick="trackClick('Appel')">
+        <img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler
+      </a>
+      <a href="https://wa.me/33644120784" target="_blank" onclick="trackClick('WhatsApp')">
+        <img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp
+      </a>
+      <a href="sms:+33644120784" onclick="trackClick('SMS')">
+        <img src="https://img.icons8.com/ios-filled/50/FFFFFF/sms.png"/> SMS
+      </a>
+      <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank" onclick="trackClick('Facebook')">
+        <img src="https://img.icons8.com/ios-filled/50/FFFFFF/facebook-new.png"/> Facebook
+      </a>
+      <a href="snapchat://add/ouassvtc" onclick="trackClick('Snapchat')">
+        <img src="https://img.icons8.com/ios-filled/50/FFFFFF/snapchat.png"/> Snapchat
+      </a>
     </div>
 
     <div class="info">
       OuassVTC est votre service de transport privé basé à Perpignan. Nos chauffeurs professionnels sont disponibles 7j/7 pour tous vos déplacements avec ponctualité, sécurité et confort. Nous vous offrons un service rapide et efficace pour vous conduire où vous le souhaitez. Faites confiance à OuassVTC pour vos trajets personnels, professionnels ou touristiques.
     </div>
 
-    <h2 style="text-align:center;">Formulaire de réservation</h2>
     <form onsubmit="sendEmail(event)">
-      <input type="number" id="passagers" name="passagers" placeholder="Nombre de passagers" min="1" max="7" required />
+      <h2 style="text-align:center;">Formulaire de réservation</h2>
       <input type="text" id="nom" name="nom" placeholder="Nom" required />
       <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" required />
-
-      <div style="display:flex; align-items:center; gap:8px;">
-        <input type="text" id="depart" name="depart" placeholder="Adresse de départ" required style="flex:1;" oninput="autocompleteAdresse('depart', this.value)">
-        <button type="button" onclick="geoLocaliser('depart')" style="padding:6px;border:none;background:none;cursor:pointer;">
-          <img src="https://img.icons8.com/ios-filled/24/marker.png" alt="Localiser" />
-        </button>
-      </div>
-
-      <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée" required oninput="autocompleteAdresse('arrivee', this.value)"/>
-
+      <input type="text" id="depart" name="depart" placeholder="Adresse de départ" required />
+      <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée" required />
+      <input type="number" id="passagers" name="passagers" placeholder="Nombre de passagers" min="1" required />
       <input type="datetime-local" id="dateheure" name="dateheure" required />
       <textarea id="message" name="message" placeholder="Informations complémentaires"></textarea>
-
-      <div class="estimation" id="prixEstime"></div>
       <button type="submit">Envoyer la demande</button>
     </form>
 
+    <div class="estimation" id="prixEstime"></div>
     <div id="google_translate_element" style="text-align:center;margin-top:20px;"></div>
   </div>
 
-  <footer>© 2025 OuassVTC. Tous droits réservés. Transport privé sur réservation.</footer>
-  <div class="hidden-keywords">Taxi Perpignan, VTC 66, chauffeur privé, Uber, G7, Bolt, réservation VTC, transport sécurisé, chauffeur disponible, véhicule avec chauffeur, service de transport 24/7, alternative taxi.</div>
+  <footer>
+    © 2025 OuassVTC. Tous droits réservés. Transport privé sur réservation.
+  </footer>
 
-  <script>
-    emailjs.init("U08QGWWRUenJDOllc");
+  <div style="text-align:center; font-size: 13px; color: #999; margin-bottom: 10px;">
+    Contactez-nous : <a href="mailto:contact@ouassvtc.fr" style="color:#999;">contact@ouassvtc.fr</a>
+  </div>
+
+  <div class="hidden-keywords">
+    Taxi Perpignan, VTC 66, chauffeur privé, Uber, G7, Bolt, réservation VTC, transport sécurisé, chauffeur disponible, véhicule avec chauffeur, service de transport 24/7, alternative taxi.
+  </div>
+
+  <script type="text/javascript">
+    function trackClick(eventName) {
+      gtag('event', eventName, {
+        event_category: 'Interaction',
+        event_label: 'OuassVTC'
+      });
+    }
+
+    (function() {
+      emailjs.init("U08QGWWRUenJDOllc");
+    })();
 
     function sendEmail(event) {
       event.preventDefault();
       const depart = document.getElementById("depart").value;
       const arrivee = document.getElementById("arrivee").value;
-      const prix = document.getElementById("prixEstime").innerText;
-
-      document.querySelector("button[type='submit']").disabled = true;
+      const distanceKm = estimatedKm;
+      const estimatedPrice = estimatedPrix;
 
       emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
         nom: document.getElementById("nom").value,
@@ -159,70 +189,42 @@
         dateheure: document.getElementById("dateheure").value,
         depart,
         arrivee,
+        passagers: document.getElementById("passagers").value,
         message: document.getElementById("message").value,
-        passagers: document.getElementById("passagers").value + "\n\n" + prix
+        distance: distanceKm.toFixed(1),
+        prix: estimatedPrice.toFixed(2)
       })
       .then(() => alert("Votre demande a bien été envoyée !"))
       .catch(() => alert("Erreur lors de l'envoi. Veuillez réessayer."));
+
+      document.querySelector("form").reset();
     }
 
-    function estimateDistance() {
-      const depart = document.getElementById("depart").value;
-      const arrivee = document.getElementById("arrivee").value;
-      if (!depart || !arrivee) return;
+    let estimatedKm = 0;
+    let estimatedPrix = 0;
+
+    function estimateDistance(depart, arrivee) {
       const url = `https://router.project-osrm.org/route/v1/driving/${encodeURIComponent(depart)};${encodeURIComponent(arrivee)}?overview=false`;
+
       fetch(url)
         .then(res => res.json())
         .then(data => {
           if (data.routes && data.routes.length) {
-            const distanceKm = data.routes[0].distance / 1000;
-            const distanceArrondie = Math.max(distanceKm, 7);
-            const prix = Math.max(20, distanceArrondie * 1.6);
-            document.getElementById("prixEstime").innerText = `Distance estimée : ${distanceKm.toFixed(1)} km | Prix estimé : ${prix.toFixed(2)} €`;
+            estimatedKm = data.routes[0].distance / 1000;
+            const kmArrondi = Math.max(estimatedKm, 7);
+            estimatedPrix = Math.max(20, kmArrondi * 1.6);
+            document.getElementById("prixEstime").innerText = `Distance estimée : ${estimatedKm.toFixed(1)} km | Prix estimé : ${estimatedPrix.toFixed(2)} €`;
           }
         });
     }
 
-    document.getElementById("depart").addEventListener("blur", estimateDistance);
-    document.getElementById("arrivee").addEventListener("blur", estimateDistance);
-
-    function geoLocaliser(id) {
-      if (!navigator.geolocation) {
-        alert("La géolocalisation n'est pas supportée.");
-        return;
+    document.getElementById("arrivee").addEventListener("blur", () => {
+      const depart = document.getElementById("depart").value;
+      const arrivee = document.getElementById("arrivee").value;
+      if (depart && arrivee) {
+        estimateDistance(depart, arrivee);
       }
-      navigator.geolocation.getCurrentPosition(pos => {
-        const lat = pos.coords.latitude;
-        const lon = pos.coords.longitude;
-        fetch(`https://nominatim.openstreetmap.org/reverse?lat=${lat}&lon=${lon}&format=json`)
-          .then(res => res.json())
-          .then(data => {
-            document.getElementById(id).value = data.display_name;
-            estimateDistance();
-          });
-      }, () => alert("Impossible de récupérer votre position."));
-    }
-
-    function autocompleteAdresse(id, query) {
-      const suggestions = document.getElementById(id + "_suggestions");
-      if (query.length < 3 || !suggestions) return;
-      fetch(`https://photon.komoot.io/api/?q=${encodeURIComponent(query)}&limit=5`)
-        .then(res => res.json())
-        .then(data => {
-          suggestions.innerHTML = '';
-          data.features.forEach(feature => {
-            const li = document.createElement("li");
-            li.textContent = feature.properties.name + ", " + (feature.properties.city || '') + " " + (feature.properties.postcode || '');
-            li.style.cursor = "pointer";
-            li.onclick = () => {
-              document.getElementById(id).value = li.textContent;
-              suggestions.innerHTML = '';
-              estimateDistance();
-            };
-            suggestions.appendChild(li);
-          });
-        });
-    }
+    });
 
     function googleTranslateElementInit() {
       new google.translate.TranslateElement({pageLanguage: 'fr'}, 'google_translate_element');
@@ -231,10 +233,3 @@
   <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
-
-
-
-
-
-
-
