--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
       text-align: center;
     }
     header img {
-      height: 140px;
+  width: 100%;
+  max-width: 450px;
+  display: block;
+  margin: 0 auto;
+  height: auto;
     }
     .container {
       padding: 20px;
