--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     }
     header {
       background-color: #000;
-      padding: 20px;
       text-align: center;
+      padding: 20px;
     }
     header img {
-      max-height: 140px;
+      max-width: 100%;
+      height: 140px;
     }
     .container {
       padding: 20px;
@@ -28,7 +29,7 @@
     }
     .car-image {
       width: 100%;
-      max-width: 450px;
+      max-width: 500px;
       display: block;
       margin: 0 auto 20px auto;
     }
@@ -57,19 +58,40 @@
       text-align: center;
       font-weight: bold;
       margin-bottom: 20px;
+      font-size: 18px;
     }
     form {
       display: flex;
       flex-direction: column;
       gap: 10px;
       max-width: 500px;
-      margin: 0 auto 20px auto;
+      margin: 20px auto;
+    }
+    .form-title {
+      text-align: center;
+      font-size: 22px;
+      font-weight: bold;
+      margin-bottom: 10px;
     }
     input, textarea, select {
       padding: 10px;
       font-size: 16px;
       border-radius: 5px;
       border: 1px solid #ccc;
+    }
+    .address-container {
+      position: relative;
+    }
+    .locate-btn {
+      position: absolute;
+      right: 10px;
+      top: 8px;
+      background: none;
+      border: none;
+      cursor: pointer;
+    }
+    .locate-btn img {
+      width: 22px;
     }
     button {
       padding: 10px;
@@ -84,13 +106,6 @@
       text-align: center;
       font-weight: bold;
       margin-top: 10px;
-      font-size: 18px;
-    }
-    .form-title {
-      text-align: center;
-      font-size: 20px;
-      font-weight: bold;
-      margin: 20px 0 10px 0;
     }
     footer {
       background-color: #000;
@@ -98,15 +113,18 @@
       text-align: center;
       padding: 30px 10px;
       margin-top: 40px;
+      font-size: 14px;
     }
-    .hidden-keywords {
-      display: none;
+    .contact {
+      text-align: center;
+      font-size: 13px;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="ouassvtc.png" alt="Logo OuassVTC" />
+    <img src="ouassvtc.png" alt="Logo OuassVTC">
   </header>
 
   <div class="container">
@@ -114,99 +132,134 @@
 
     <div class="buttons">
       <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler</a>
-      <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
+      <a href="https://wa.me/33644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
       <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/sms.png"/> SMS</a>
       <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/facebook-new.png"/> Facebook</a>
       <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/snapchat.png"/> Snapchat</a>
     </div>
 
     <div class="info">
-      OuassVTC est votre service de transport privé basé à Perpignan. Nos chauffeurs professionnels sont disponibles 7j/7 pour tous vos déplacements avec ponctualité, sécurité et confort. Nous vous offrons un service rapide et efficace pour vous conduire où vous le souhaitez. Faites confiance à OuassVTC pour vos trajets personnels, professionnels ou touristiques.
+      OuassVTC est votre service de transport privé basé à Perpignan. Nos chauffeurs professionnels sont disponibles 7j/7 pour tous vos déplacements avec ponctualité, sécurité et confort.
     </div>
 
-    <div class="form-title">Formulaire de réservation</div>
-    <form onsubmit="sendEmail(event)">
+    <div class="form-title">Formulaire de réservation avec tarif donné à l’avance</div>
+
+    <form id="reservationForm" onsubmit="sendEmail(event)">
       <input type="text" id="nom" name="nom" placeholder="Nom" required />
       <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" required />
-      <input type="text" id="depart" name="depart" placeholder="Adresse de départ" required />
+
+      <div class="address-container">
+        <input type="text" id="depart" name="depart" placeholder="Adresse de départ" required />
+        <button type="button" class="locate-btn" onclick="geolocate()">
+          <img src="https://img.icons8.com/ios-filled/50/000000/navigate.png" alt="Localiser" />
+        </button>
+      </div>
+
       <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée" required />
       <input type="datetime-local" id="dateheure" name="dateheure" required />
-      <select id="passagers" name="passagers">
-        <option value="" disabled selected>Nombre de passagers</option>
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4+">4 ou plus</option>
-      </select>
+      <input type="number" id="passagers" name="passagers" placeholder="Nombre de passagers" min="1" max="7" />
       <textarea id="message" name="message" placeholder="Informations complémentaires"></textarea>
-      <div class="estimation" id="prixEstime"></div>
+      <div class="estimation" id="prixEstime">Distance : - | Prix : -</div>
       <button type="submit">Envoyer la demande</button>
     </form>
 
-    <div id="google_translate_element" style="text-align:center;margin-top:20px;"></div>
+    <div class="contact">
+      Pour toute question, vous pouvez nous contacter par mail : <a href="mailto:contact@ouassvtc.fr">contact@ouassvtc.fr</a>
+    </div>
   </div>
-
   <footer>
-    © 2025 OuassVTC. Tous droits réservés. Transport privé sur réservation.<br>
-    Pour toute question, contactez-nous à <a href="mailto:contact@ouassvtc.fr" style="color:#fff;">contact@ouassvtc.fr</a>
+    © 2025 OuassVTC. Tous droits réservés. Transport privé sur réservation.
   </footer>
 
-  <div class="hidden-keywords">
-    Taxi Perpignan, VTC 66, chauffeur privé, Uber, G7, Bolt, réservation VTC, transport sécurisé, chauffeur disponible, véhicule avec chauffeur, service de transport 24/7, alternative taxi.
-  </div>
+  <script>
+    emailjs.init("U08QGWWRUenJDOllc");
 
-  <script type="text/javascript">
-    (function() {
-      emailjs.init("U08QGWWRUenJDOllc");
-    })();
+    const apiKey = "3c6fd63c601db422d98506845138e792b";
 
-    function sendEmail(event) {
-      event.preventDefault();
-      const depart = document.getElementById("depart").value;
-      const arrivee = document.getElementById("arrivee").value;
-
-      calculateDistance(depart, arrivee, function(km, prix) {
-        emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
-          nom: document.getElementById("nom").value,
-          telephone: document.getElementById("telephone").value,
-          dateheure: document.getElementById("dateheure").value,
-          depart,
-          arrivee,
-          passagers: document.getElementById("passagers").value,
-          message: document.getElementById("message").value,
-          distance: km.toFixed(1) + " km",
-          tarif: prix.toFixed(2) + " €"
-        }).then(() => {
-          alert("Votre demande a bien été envoyée !");
-        }).catch(() => alert("Erreur lors de l'envoi. Veuillez réessayer."));
-      });
+    function geolocate() {
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(async position => {
+          const lat = position.coords.latitude;
+          const lon = position.coords.longitude;
+          const response = await fetch(`https://api.geoapify.com/v1/geocode/reverse?lat=${lat}&lon=${lon}&apiKey=${apiKey}`);
+          const data = await response.json();
+          if (data.features.length > 0) {
+            document.getElementById('depart').value = data.features[0].properties.formatted;
+            estimateDistance();
+          }
+        });
+      } else {
+        alert("La géolocalisation n'est pas supportée par ce navigateur.");
+      }
     }
 
-    function calculateDistance(depart, arrivee, callback) {
-      fetch(`https://api.geoapify.com/v1/routing?waypoints=${encodeURIComponent(depart)}|${encodeURIComponent(arrivee)}&mode=drive&apiKey=3cf6d3c601db422d98506845138e792b`)
-      .then(response => response.json())
-      .then(data => {
-        if (data.features && data.features.length > 0) {
+    async function getCoordinates(address) {
+      const res = await fetch(`https://api.geoapify.com/v1/geocode/search?text=${encodeURIComponent(address)}&apiKey=${apiKey}`);
+      const data = await res.json();
+      if (data.features.length === 0) throw new Error("Adresse non trouvée");
+      return data.features[0].geometry.coordinates;
+    }
+
+    async function estimateDistance() {
+      try {
+        const depart = document.getElementById("depart").value;
+        const arrivee = document.getElementById("arrivee").value;
+
+        const [lon1, lat1] = await getCoordinates(depart);
+        const [lon2, lat2] = await getCoordinates(arrivee);
+
+        const response = await fetch(`https://api.geoapify.com/v1/routing?waypoints=${lat1},${lon1}|${lat2},${lon2}&mode=drive&apiKey=${apiKey}`);
+        const data = await response.json();
+
+        if (data.features.length > 0) {
           const distanceKm = data.features[0].properties.distance / 1000;
           const distanceArrondie = Math.max(distanceKm, 7);
           const prix = Math.max(20, distanceArrondie * 1.6);
-          document.getElementById("prixEstime").innerText = `Distance estimée : ${distanceKm.toFixed(1)} km | Prix estimé : ${prix.toFixed(2)} €`;
-          callback(distanceKm, prix);
+
+          const estimationText = `Distance : ${distanceKm.toFixed(1)} km | Prix estimé : ${prix.toFixed(2)} €`;
+          document.getElementById("prixEstime").innerText = estimationText;
+
+          return { distance: distanceKm.toFixed(1), prix: prix.toFixed(2) };
         } else {
           document.getElementById("prixEstime").innerText = "Estimation indisponible.";
-          callback(0, 0);
+          return null;
         }
-      })
-      .catch(() => {
-        document.getElementById("prixEstime").innerText = "Erreur de calcul.";
-        callback(0, 0);
-      });
+      } catch (err) {
+        document.getElementById("prixEstime").innerText = "Erreur dans l'estimation.";
+        return null;
+      }
     }
 
-    function googleTranslateElementInit() {
-      new google.translate.TranslateElement({pageLanguage: 'fr'}, 'google_translate_element');
+    async function sendEmail(event) {
+      event.preventDefault();
+      const estimation = await estimateDistance();
+      if (!estimation) return;
+
+      const form = event.target;
+      const data = {
+        nom: document.getElementById("nom").value,
+        telephone: document.getElementById("telephone").value,
+        depart: document.getElementById("depart").value,
+        arrivee: document.getElementById("arrivee").value,
+        dateheure: document.getElementById("dateheure").value,
+        passagers: document.getElementById("passagers").value,
+        message: document.getElementById("message").value,
+        distance: estimation.distance,
+        prix: estimation.prix
+      };
+
+      emailjs.send("service_kdvgh9f", "template_5xt5vlv", data)
+        .then(() => {
+          alert("Votre demande a bien été envoyée !");
+          form.reset();
+          document.getElementById("prixEstime").innerText = "Distance : - | Prix : -";
+        })
+        .catch(() => alert("Erreur lors de l'envoi. Veuillez réessayer."));
     }
+
+    // Mise à jour automatique de l'estimation
+    document.getElementById("depart").addEventListener("blur", estimateDistance);
+    document.getElementById("arrivee").addEventListener("blur", estimateDistance);
   </script>
-  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
