--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
     }
     header {
       background-color: #000;
-      text-align: center;
       padding: 20px;
+      text-align: center;
     }
     header img {
-      max-width: 100%;
-      height: 140px;
+      max-height: 150px;
     }
     .container {
       padding: 20px;
@@ -29,7 +28,7 @@
     }
     .car-image {
       width: 100%;
-      max-width: 500px;
+      max-width: 450px;
       display: block;
       margin: 0 auto 20px auto;
     }
@@ -58,7 +57,9 @@
       text-align: center;
       font-weight: bold;
       margin-bottom: 20px;
-      font-size: 18px;
+    }
+    h2 {
+      text-align: center;
     }
     form {
       display: flex;
@@ -67,31 +68,23 @@
       max-width: 500px;
       margin: 20px auto;
     }
-    .form-title {
-      text-align: center;
-      font-size: 22px;
-      font-weight: bold;
-      margin-bottom: 10px;
+    .address-group {
+      display: flex;
+      align-items: center;
+      gap: 5px;
     }
     input, textarea, select {
+      flex: 1;
       padding: 10px;
       font-size: 16px;
       border-radius: 5px;
       border: 1px solid #ccc;
     }
-    .address-container {
-      position: relative;
-    }
-    .locate-btn {
-      position: absolute;
-      right: 10px;
-      top: 8px;
+    .localise-button {
       background: none;
       border: none;
       cursor: pointer;
-    }
-    .locate-btn img {
-      width: 22px;
+      font-size: 20px;
     }
     button {
       padding: 10px;
@@ -106,6 +99,7 @@
       text-align: center;
       font-weight: bold;
       margin-top: 10px;
+      font-size: 18px;
     }
     footer {
       background-color: #000;
@@ -113,18 +107,20 @@
       text-align: center;
       padding: 30px 10px;
       margin-top: 40px;
-      font-size: 14px;
+    }
+    .hidden-keywords {
+      display: none;
     }
     .contact {
+      font-size: 12px;
       text-align: center;
-      font-size: 13px;
-      margin-top: 20px;
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="ouassvtc.png" alt="Logo OuassVTC">
+    <img src="ouassvtc.png" alt="Logo OuassVTC" />
   </header>
 
   <div class="container">
@@ -132,7 +128,7 @@
 
     <div class="buttons">
       <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler</a>
-      <a href="https://wa.me/33644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
+      <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
       <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/sms.png"/> SMS</a>
       <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/facebook-new.png"/> Facebook</a>
       <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/snapchat.png"/> Snapchat</a>
@@ -142,61 +138,71 @@
       OuassVTC est votre service de transport privé basé à Perpignan. Nos chauffeurs professionnels sont disponibles 7j/7 pour tous vos déplacements avec ponctualité, sécurité et confort.
     </div>
 
-    <div class="form-title">Formulaire de réservation avec tarif donné à l’avance</div>
+    <h2>Formulaire de réservation (tarif donné à l'avance)</h2>
 
-    <form id="reservationForm" onsubmit="sendEmail(event)">
+    <form onsubmit="sendEmail(event)">
       <input type="text" id="nom" name="nom" placeholder="Nom" required />
       <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" required />
 
-      <div class="address-container">
+      <div class="address-group">
         <input type="text" id="depart" name="depart" placeholder="Adresse de départ" required />
-        <button type="button" class="locate-btn" onclick="geolocate()">
-          <img src="https://img.icons8.com/ios-filled/50/000000/navigate.png" alt="Localiser" />
-        </button>
+        <button type="button" class="localise-button" onclick="geolocate()">📍</button>
       </div>
 
       <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée" required />
       <input type="datetime-local" id="dateheure" name="dateheure" required />
-      <input type="number" id="passagers" name="passagers" placeholder="Nombre de passagers" min="1" max="7" />
+      <select id="passagers" name="passagers" required>
+        <option value="">Nombre de passagers</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+      </select>
       <textarea id="message" name="message" placeholder="Informations complémentaires"></textarea>
+
       <div class="estimation" id="prixEstime">Distance : - | Prix : -</div>
+
       <button type="submit">Envoyer la demande</button>
     </form>
 
     <div class="contact">
-      Pour toute question, vous pouvez nous contacter par mail : <a href="mailto:contact@ouassvtc.fr">contact@ouassvtc.fr</a>
+      Pour toute question, contactez-nous par mail à <a href="mailto:contact@ouassvtc.fr">contact@ouassvtc.fr</a>
     </div>
   </div>
+
   <footer>
     © 2025 OuassVTC. Tous droits réservés. Transport privé sur réservation.
   </footer>
 
+  <div class="hidden-keywords">
+    Taxi Perpignan, VTC 66, chauffeur privé, Uber, réservation VTC, alternative taxi Perpignan.
+  </div>
+
   <script>
     emailjs.init("U08QGWWRUenJDOllc");
-
     const apiKey = "3c6fd63c601db422d98506845138e792b";
 
-    function geolocate() {
+    async function geolocate() {
       if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(async position => {
-          const lat = position.coords.latitude;
-          const lon = position.coords.longitude;
-          const response = await fetch(`https://api.geoapify.com/v1/geocode/reverse?lat=${lat}&lon=${lon}&apiKey=${apiKey}`);
-          const data = await response.json();
+        navigator.geolocation.getCurrentPosition(async pos => {
+          const lat = pos.coords.latitude;
+          const lon = pos.coords.longitude;
+          const res = await fetch(`https://api.geoapify.com/v1/geocode/reverse?lat=${lat}&lon=${lon}&apiKey=${apiKey}`);
+          const data = await res.json();
           if (data.features.length > 0) {
             document.getElementById('depart').value = data.features[0].properties.formatted;
             estimateDistance();
           }
         });
       } else {
-        alert("La géolocalisation n'est pas supportée par ce navigateur.");
+        alert("Géolocalisation non supportée");
       }
     }
 
     async function getCoordinates(address) {
       const res = await fetch(`https://api.geoapify.com/v1/geocode/search?text=${encodeURIComponent(address)}&apiKey=${apiKey}`);
       const data = await res.json();
-      if (data.features.length === 0) throw new Error("Adresse non trouvée");
+      if (!data.features.length) throw new Error("Adresse non trouvée");
       return data.features[0].geometry.coordinates;
     }
 
@@ -208,23 +214,19 @@
         const [lon1, lat1] = await getCoordinates(depart);
         const [lon2, lat2] = await getCoordinates(arrivee);
 
-        const response = await fetch(`https://api.geoapify.com/v1/routing?waypoints=${lat1},${lon1}|${lat2},${lon2}&mode=drive&apiKey=${apiKey}`);
-        const data = await response.json();
-
+        const res = await fetch(`https://api.geoapify.com/v1/routing?waypoints=${lat1},${lon1}|${lat2},${lon2}&mode=drive&apiKey=${apiKey}`);
+        const data = await res.json();
         if (data.features.length > 0) {
           const distanceKm = data.features[0].properties.distance / 1000;
-          const distanceArrondie = Math.max(distanceKm, 7);
-          const prix = Math.max(20, distanceArrondie * 1.6);
-
-          const estimationText = `Distance : ${distanceKm.toFixed(1)} km | Prix estimé : ${prix.toFixed(2)} €`;
-          document.getElementById("prixEstime").innerText = estimationText;
-
+          const d = Math.max(distanceKm, 7);
+          const prix = Math.max(20, d * 1.6);
+          document.getElementById("prixEstime").innerText = `Distance : ${distanceKm.toFixed(1)} km | Prix estimé : ${prix.toFixed(2)} €`;
           return { distance: distanceKm.toFixed(1), prix: prix.toFixed(2) };
         } else {
           document.getElementById("prixEstime").innerText = "Estimation indisponible.";
           return null;
         }
-      } catch (err) {
+      } catch {
         document.getElementById("prixEstime").innerText = "Erreur dans l'estimation.";
         return null;
       }
@@ -232,11 +234,13 @@
 
     async function sendEmail(event) {
       event.preventDefault();
-      const estimation = await estimateDistance();
-      if (!estimation) return;
+      const btn = event.target.querySelector("button[type='submit']");
+      btn.disabled = true;
 
-      const form = event.target;
-      const data = {
+      const est = await estimateDistance();
+      if (!est) return;
+
+      emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
         nom: document.getElementById("nom").value,
         telephone: document.getElementById("telephone").value,
         depart: document.getElementById("depart").value,
@@ -244,20 +248,15 @@
         dateheure: document.getElementById("dateheure").value,
         passagers: document.getElementById("passagers").value,
         message: document.getElementById("message").value,
-        distance: estimation.distance,
-        prix: estimation.prix
-      };
-
-      emailjs.send("service_kdvgh9f", "template_5xt5vlv", data)
-        .then(() => {
-          alert("Votre demande a bien été envoyée !");
-          form.reset();
-          document.getElementById("prixEstime").innerText = "Distance : - | Prix : -";
-        })
-        .catch(() => alert("Erreur lors de l'envoi. Veuillez réessayer."));
+        distance: est.distance,
+        prix: est.prix
+      }).then(() => {
+        alert("Demande envoyée !");
+        event.target.reset();
+        document.getElementById("prixEstime").innerText = "Distance : - | Prix : -";
+      }).catch(() => alert("Erreur lors de l'envoi."));
     }
 
-    // Mise à jour automatique de l'estimation
     document.getElementById("depart").addEventListener("blur", estimateDistance);
     document.getElementById("arrivee").addEventListener("blur", estimateDistance);
   </script>
